# befunge

./: CMakeLists.txt
lib/: code.cpp  code.hpp
test/: CMakeLists.txt  code_test.cpp
