cmake_minimum_required(VERSION 3.18 FATAL_ERROR)
project(robocup2027-raspberrypi-program LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release CACHE STRING "" FORCE)
endif()

option(DEBUGER "A befunge debugger" ON)
option(INTERPRETER "A befunge interpreter" ON)
option(COMPILER "A befunge compiler" ON)
